--- a/CursoMinimal.APII/Properties/launchSettings.json
+++ b/CursoMinimal.APII/Properties/launchSettings.json
@@ -12,16 +12,16 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": false,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    },''
+    },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": false,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
