Finalização inclusao de swagger e autenticacao#

--- a/CursoMinimal.APII/appsettings.json
+++ b/CursoMinimal.APII/appsettings.json
@@ -8,5 +8,16 @@
   "ConnectionStrings": {
     "MealDbConnectionString": "Data Source=Meal.db"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "DefaultScheme": "Bearer",
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "CursoMinimal.API"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
+  }
 }
